H3CIPMSJAVA-20180830/src/objects/Zip_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>安徽-安庆</fullName>
                </value>
                <value>
                    <fullName>安徽-蚌埠</fullName>
                </value>
                <value>
                    <fullName>安徽-亳州</fullName>
                </value>
                <value>
                    <fullName>安徽-巢湖</fullName>
                </value>
                <value>
                    <fullName>安徽-池州</fullName>
                </value>
                <value>
                    <fullName>安徽-滁州</fullName>
                </value>
                <value>
                    <fullName>安徽-阜阳</fullName>
                </value>
                <value>
                    <fullName>安徽-淮北</fullName>
                </value>
                <value>
                    <fullName>安徽-淮南</fullName>
                </value>
                <value>
                    <fullName>安徽-黄山</fullName>
                </value>
                <value>
                    <fullName>安徽-六安</fullName>
                </value>
                <value>
                    <fullName>安徽-马鞍山</fullName>
                </value>
                <value>
                    <fullName>安徽-其它城市</fullName>
                </value>
                <value>
                    <fullName>安徽-铜陵</fullName>
                </value>
                <value>
                    <fullName>安徽-芜湖</fullName>
                </value>
                <value>
                    <fullName>安徽-宣城</fullName>
                </value>
                <value>
                    <fullName>澳门</fullName>
                </value>
                <value>
                    <fullName>北京市</fullName>
                </value>
                <value>
                    <fullName>福建-东山</fullName>
                </value>
                <value>
                    <fullName>福建-福清</fullName>
                </value>
                <value>
                    <fullName>福建-福州</fullName>
                </value>
                <value>
                    <fullName>福建-晋江</fullName>
                </value>
                <value>
                    <fullName>福建-龙岩</fullName>
                </value>
                <value>
                    <fullName>福建-马尾</fullName>
                </value>
                <value>
                    <fullName>福建-南平</fullName>
                </value>
                <value>
                    <fullName>福建-宁德</fullName>
                </value>
                <value>
                    <fullName>福建-莆田</fullName>
                </value>
                <value>
                    <fullName>福建-其它城市</fullName>
                </value>
                <value>
                    <fullName>福建-泉州</fullName>
                </value>
                <value>
                    <fullName>福建-三明</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anhui</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Chongqing</fullName>
                </value>
                <value>
                    <fullName>Fujian</fullName>
                </value>
                <value>
                    <fullName>Gansu</fullName>
                </value>
                <value>
                    <fullName>Guangdong</fullName>
                </value>
                <value>
                    <fullName>Guangxi</fullName>
                </value>
                <value>
                    <fullName>Guizhou</fullName>
                </value>
                <value>
                    <fullName>Hainan</fullName>
                </value>
                <value>
                    <fullName>Hebei</fullName>
                </value>
                <value>
                    <fullName>Heilongjiang</fullName>
                </value>
                <value>
                    <fullName>Henan</fullName>
                </value>
                <value>
                    <fullName>Hongkong</fullName>
                </value>
                <value>
                    <fullName>Hubei</fullName>
                </value>
                <value>
                    <fullName>Hunan</fullName>
                </value>
                <value>
                    <fullName>Jiangsu</fullName>
                </value>
                <value>
                    <fullName>Jiangxi</fullName>
                </value>
                <value>
                    <fullName>Jilin</fullName>
                </value>
                <value>
                    <fullName>Liaoning</fullName>
                </value>
                <value>
                    <fullName>Macao</fullName>
                </value>
                <value>
                    <fullName>Neimenggu</fullName>
                </value>
                <value>
                    <fullName>Ningxia</fullName>
                </value>
                <value>
                    <fullName>Qinghai</fullName>
                </value>
                <value>
                    <fullName>Shanxi</fullName>
                </value>
                <value>
                    <fullName>Shandong</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Shaanxi</fullName>
                </value>
                <value>
                    <fullName>Shenzhen</fullName>
                </value>
                <value>
                    <fullName>Sichuan</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>length__c</fullName>
        <formula>Len(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>邮编长度</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Zip Mapping</label>
    <nameField>
        <label>Zip Code</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>